Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,9 @@
     }
    ],
    "source": [
-    "countries.remove('New Mexico')"
+    "countries.remove('New Mexico')\n",
+    "\n",
+    "new_strings = []"
    ]
   },
   {
