Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -328,7 +328,8 @@
    "source": [
     "countries.remove('New Mexico')\n",
     "\n",
-    "new_strings = []"
+    "new_strings = []\n",
+    "\n"
    ]
   },
   {
