Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -327,9 +327,7 @@
    ],
    "source": [
     "countries.remove('New Mexico')\n",
-    "\n",
-    "new_strings = []\n",
-    "\n"
+    "countries/"
    ]
   },
   {
